# github-stat-collector

./: .gitignore  .yamllint  Dockerfile  README.md  backfill-stats.py  collect-stats.py  config.example.yml  find-actions.py  mypy.ini  pyproject.toml  tox.ini  view-release-stats.py  yamllint.yml
.github/workflows/: README.md  ci.yaml  deploy.yml  run.yml
github_stats/: github_api.py  github_graphql.py  gitops.py  schema.py  util.py
github_stats/outputs/: README.md  __init__.py  google.py  grafana_cloud.py  influx.py
tests/: test_github_stats.py
util/: build.sh  lint-files.sh
util/gcloud-metric-manage/: README.md  delete-metrics.py  list-custom-metrics.py  pyproject.toml
