[tool.poetry]
name = "github-stats"
version = "0.1.0"
description = "Tool to collect and format Github repo stats for display in a TSDB"
authors = ["John Seekins <john@civiceagle.com>"]

[tool.poetry.dependencies]
python = "^3.9"
regex = "^2022.7.25"
requests = "^2.28.0"
PyYAML = "^6.0"
influxdb-client = {extras = ["ciso"], version = "^1.30.0"}
pygit2 = "^1.10.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
