[tool.poetry]
name = "github-stats"
version = "0.1.0"
description = "Tool to collect and format Github repo stats for display in a TSDB"
authors = ["John Seekins <john@civiceagle.com>"]

[tool.poetry.dependencies]
python = "^3.11"
regex = "^2022.10.31"
requests = "^2.28.0"
PyYAML = "^6.0"
pygit2 = "^1.12.1"
influxdb-client = {extras = ["ciso"], version = "^1.35.0"}
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = "^23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
