[tool.poetry]
name = "gcloud-metric-manage"
version = "0.1.0"
description = "Delete Bad/Unneeded custom metrics from Google Cloud"
authors = ["John Seekins <john@civiceagle.com>"]

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-monitoring = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
